<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddActivity">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_masuk_keluar"
        android:layout_margin="5dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="4dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/rg_masuk_keluar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <RadioButton
                android:id="@+id/radioMasuk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/masuk" />

            <RadioButton
                android:id="@+id/radioKeluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keluar" />

        </RadioGroup>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_uang"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cv_masuk_keluar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etJumlah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rp"
                android:inputType="number"
                app:layout_constraintTop_toTopOf="parent"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/et_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:minLines="5"
                android:maxLines="10"
                android:hint="@string/keterangan"
                android:gravity="top"
                app:layout_constraintTop_toBottomOf="@+id/etJumlah"
                android:importantForAutofill="no"
                android:inputType="none" />

            <EditText
                android:id="@+id/et_tanggal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/tanggal"
                app:layout_constraintTop_toBottomOf="@+id/et_keterangan"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:text="@string/simpan"
        app:layout_constraintTop_toBottomOf="@+id/cv_uang"/>


</androidx.constraintlayout.widget.ConstraintLayout>